finish mini router

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="/about">about</a>
     <a href="/contact">contact</a>
     <div id="app"></div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="/assets/index.js"></script>
 </body>
 
 </html>
